fix for MID-10315 description column in tables is too wide

--- a/gui/admin-gui/src/frontend/scss/midpoint.scss
+++ b/gui/admin-gui/src/frontend/scss/midpoint.scss
@@ -1990,3 +1990,8 @@ th.debug-list-buttons {
 {
   @include smooth-transition(0.08s);
 }
+
+// MID-10315 add minimum width for object name
+.name-min-width {
+  min-width: 300px;
+}
